# personal-goal-tracker

./: .env.copy  .env.example  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py  metrics.py
app/core/: config.py  logging.py
app/goals/: __init__.py
app/health/: routes.py  schemas.py
app/reports/: __init__.py
tests/: test_health.py  test_metrics_counter.py  test_smoke.py
