[tool.poetry]
name = "personal-goal-tracker"
version = "0.1.0"
description = ""
authors = ["MisterGold19 <ivan.kuzenkov.public@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = " >=0.116.1,<0.117.0 "
uvicorn = { extras = ["standard"], version = ">=0.35.0,<0.36.0" }
pydantic = ">=2"
sqlalchemy = ">=2"
alembic = ">=1.16.5,<2.0.0"
psycopg = { extras = ["binary"], version = ">=3.2.10,<4.0.0" }
python-dotenv = ">=1.1.1,<2.0.0"
structlog = ">=25.4.0,<26.0.0"
prometheus-client = ">=0.22.1,<0.23.0"
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
mypy = "^1.17.1"
ruff = "^0.13.0"
black = "^25.1.0"
types-requests = "^2.32.4.20250809"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.9.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
